--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<meta name="Resource-type" content="Document" />
 
 
-	<link rel="stylesheet" type="text/css" href="/dist/fullpage.css" />
-  <link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" href="/dist/fullpage.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Inter">
 
