--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Vertical navigation dots - fullPage.js</title>
@@ -26,9 +26,9 @@
 		<a href="#home">Home</a>
 		<a href="#news">News</a>
 		<a href="#contact">Contact</a>
-	  </div>
+	</div>
 	  
-	  <div class="main">
+	<div class="main">
 		<div id="fullpage">
 			<div class="section" id="section0">
 				<h1 style="text-align: center;">I like to go <br>with the flow.</h1>
@@ -51,7 +51,6 @@
 				</div>
 			</div>
 		</div>
-		
 	  </div>
 
 <script type="text/javascript" src="/dist/fullpage.js"></script>
