--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
 		</div>
 	  </div>
 
-<script type="text/javascript" src="/dist/fullpage.js"></script>
-<script type="text/javascript" src="/script.js"></script>
+<script src="/dist/fullpage.js"></script>
+<script src="/dist/fullpage.min.js"></script>
+<script src="/dist/fullpage.min.js.map"></script>
+<script src="/script.js"></script>
 
 <script type="text/javascript">
     var myFullpage = new fullpage('#fullpage', {
