testing fullpage layout

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 
 	<link rel="stylesheet" href="/dist/fullpage.css" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Inter">
+	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet"
+	href="https://fonts.googleapis.com/css?family=Inter">
 
 	<!--[if IE]>
 		<script type="text/javascript">
@@ -30,7 +30,7 @@
 	  
 	<div class="main">
 		<div id="fullpage">
-			<div class="section" id="section0">
+			<div class="section full-height" id="section0">
 				<h1 style="text-align: center;">I like to go <br>with the flow.</h1>
 				<p style="text-align: center;">This is a description about me.</p>
 				<div class="icons" style="text-align: center;">
@@ -53,10 +53,8 @@
 		</div>
 	  </div>
 
-<script src="/dist/fullpage.js"></script>
-<script src="/dist/fullpage.min.js"></script>
-<script src="/dist/fullpage.min.js.map"></script>
-<script src="/script.js"></script>
+<script type="text/javascript" src="/dist/fullpage.js"></script>
+<script type="text/javascript" src="/script.js"></script>
 
 <script type="text/javascript">
     var myFullpage = new fullpage('#fullpage', {
