Removing fullpage js
Not helpful + a little buggy for my purposes, might need to play around with relative page height

--- a/index.html
+++ b/index.html
@@ -4,21 +4,12 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Vertical navigation dots - fullPage.js</title>
 	<meta name="author" content="Amy Lo" />
-	<meta name="description" content="fullPage full-screen navigation and sections control menu." />
-	<meta name="keywords"  content="fullpage,jquery,demo,screen,fullscreen,navigation,control arrows, dots" />
-	<meta name="Resource-type" content="Document" />
 
 
 	<link rel="stylesheet" href="/dist/fullpage.css" />
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet"
 	href="https://fonts.googleapis.com/css?family=Inter">
-
-	<!--[if IE]>
-		<script type="text/javascript">
-			 var console = { log: function() {} };
-		</script>
-	<![endif]-->
 </head>
 <body>
 
@@ -30,14 +21,8 @@
 	  
 	<div class="main">
 		<div id="fullpage">
-			<div class="section full-height" id="section0">
-				<h1 style="text-align: center;">I like to go <br>with the flow.</h1>
-				<p style="text-align: center;">This is a description about me.</p>
-				<div class="icons" style="text-align: center;">
-					<img src="assets/icons/basic/mail.svg" alt="Email" width="30" height="30">
-					<img src="assets/icons/brand/instagram.svg" alt="Email" width="29" height="30">
-					<img src="assets/icons/brand/LinkedIn.svg" alt="Email" width="25" height="30">
-				</div>
+			<div class="height: 100vh;">
+				
 			</div>
 			<div class="section" id="section1">
 				<div class="intro">
@@ -53,17 +38,17 @@
 		</div>
 	  </div>
 
-<script type="text/javascript" src="/dist/fullpage.js"></script>
-<script type="text/javascript" src="/script.js"></script>
+<!-- <script type="text/javascript" src="/dist/fullpage.js"></script>
+<script type="text/javascript" src="/script.js"></script> -->
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     var myFullpage = new fullpage('#fullpage', {
         anchors: ['firstPage', 'secondPage', '3rdPage'],
         navigation: true,
         navigationPosition: 'right',
         navigationTooltips: ['First page', 'Second page', 'Third and last page']
     });
-</script>
+</script> -->
 
 </body>
 </html>
