--- a/index.html
+++ b/index.html
@@ -13,18 +13,15 @@
 	<script src="script.js"></script>
 </head>
 <body>
-<<<<<<< Updated upstream
 <div id="carousel" class="snap">
-  <div id="carousel-1">
-	  <section style="display: block;">
-		<h1>I like to go <br>with the flow.</h1>
+  <div id="carousel-1" style="display: block">
+		<h1 style="text-align: center; margin-top: 30vh;">I like to go <br>with the flow.</h1>
 		<p style="text-align: center;">This is a description about me.</p>
 		<div class="icons" style="text-align: center;">
 			<img src="assets/icons/basic/mail.svg" alt="Email" width="30" height="30">
 			<img src="assets/icons/brand/instagram.svg" alt="Email" width="29" height="30">
 			<img src="assets/icons/brand/LinkedIn.svg" alt="Email" width="25" height="30">
 		</div>
-	  </section>
   </div>
   <div id="carousel-2">Item 2</div>
   <div id="carousel-3">Item 3</div>
@@ -33,39 +30,5 @@
 <script src="https://bundle.run/css-scroll-snap-polyfill@0.1.2"></script>
 <script  src="./script.js"></script>
 	
-=======
-
-	<div class="navbar">
-		<a href="#home">Home</a>
-		<a href="#news">News</a>
-		<a href="#contact">Contact</a>
-	</div>
-
-	<section>
-		<h1></h1>
-	</section>
-
-
-	  
-	<div class="main">
-		<div id="fullpage">
-			<div class="height: 100vh;">
-				
-			</div>
-			<div class="section" id="section1">
-				<div class="intro">
-					<h1>Navigation dots</h1>
-					<p>An easy and beautiful way to navigate throw the sections</p>
-				</div>
-			</div>
-			<div class="section" id="section2">
-				<div class="intro">
-					<h1>Enjoy it</h1>
-				</div>
-			</div>
-		</div>
-	  </div>
-
->>>>>>> Stashed changes
 </body>
 </html>
