testing out mobile query

--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
 	<script src="script.js"></script>
 </head>
 <body>
+
+	<div class="navbar">
+		<p><a href="#home">Home</a></p>
+		<p><a href="#news">News</a></p>
+		<p><a href="#contact">Contact</a></p>
+	  </div>
+
 <div id="carousel" class="snap">
-  <div id="carousel-1" style="display: block">
+  <div id="carousel-1" style="display: block;">
 		<h1 style="text-align: center; margin-top: 30vh;">I like to go <br>with the flow.</h1>
 		<p style="text-align: center;">This is a description about me.</p>
 		<div class="icons" style="text-align: center;">
