Testing mobile text + enlarging

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
 
 	<div class="navbar">
-		<p><a href="#home">Home</a></p>
-		<p><a href="#news">News</a></p>
-		<p><a href="#contact">Contact</a></p>
+		<p class="p2"><a href="#home">Home</a></p>
+		<p class="p2"><a href="#news">News</a></p>
+		<p class="p2"><a href="#contact">Contact</a></p>
 	  </div>
 
 <div id="carousel" class="snap">
