renaming items + editing fonts size

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
 	<div class="navbar">
 		<p class="p2"><a href="#home">Home</a></p>
-		<p class="p2"><a href="#news">News</a></p>
-		<p class="p2"><a href="#contact">Contact</a></p>
+		<p class="p2"><a href="#">News</a></p>
+		<p class="p2"><a href="#">Contact</a></p>
 	  </div>
 
 <div id="carousel" class="snap">
-  <div id="carousel-1" style="display: block;">
+  <div id="home" style="display: block;">
 		<h1 style="text-align: center; margin-top: 30vh;">I like to go <br>with the flow.</h1>
 		<p style="text-align: center;">This is a description about me.</p>
 		<div class="icons" style="text-align: center;">
@@ -30,8 +30,8 @@
 			<img src="assets/icons/brand/LinkedIn.svg" alt="Email" width="25" height="30">
 		</div>
   </div>
-  <div id="carousel-2">Item 2</div>
-  <div id="carousel-3">Item 3</div>
+  <div id="portfolio-1">Item 2</div>
+  <div id="portfolio-2">Item 3</div>
 </div>
 
 <script src="https://bundle.run/css-scroll-snap-polyfill@0.1.2"></script>
