--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 <body>
 
 	<div class="navbar">
-		<p class="p2"><a href="#home">Home</a></p>
-		<p class="p2"><a href="#">News</a></p>
-		<p class="p2"><a href="#">Contact</a></p>
+		<p><a href="#home">Home</a></p>
+		<p><a href="#">News</a></p>
+		<p><a href="#">Contact</a></p>
 	  </div>
 
 <div id="carousel" class="snap">
   <div id="home" style="display: block;">
 		<h1 style="text-align: center; margin-top: 30vh;">I like to go <br>with the flow.</h1>
-		<p style="text-align: center;">This is a description about me.</p>
+		<p style="text-align: center;"></p>This is a description about me.</p>
 		<div class="icons" style="text-align: center;">
 			<img src="assets/icons/basic/mail.svg" alt="Email" width="30" height="30">
 			<img src="assets/icons/brand/instagram.svg" alt="Email" width="29" height="30">
