--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Amy Lo Design Portolio</title>
 	<meta name="author" content="Amy Lo" />
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/dist/fullpage.css" />
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet"
