Creating tabular layout for website portfolio

--- a/index.html
+++ b/index.html
@@ -21,17 +21,31 @@
 	  </div>
 
 <div id="carousel" class="snap">
-  <div id="home" style="display: block;">
-		<h1 style="text-align: center; margin-top: 30vh;">I like to go <br>with the flow.</h1>
-		<p style="text-align: center;"></p>This is a description about me.</p>
-		<div class="icons" style="text-align: center;">
-			<img src="assets/icons/basic/mail.svg" alt="Email" width="30" height="30">
-			<img src="assets/icons/brand/instagram.svg" alt="Email" width="29" height="30">
-			<img src="assets/icons/brand/LinkedIn.svg" alt="Email" width="25" height="30">
-		</div>
+  <div id="home">
+	<table width="80%" style="margin: auto;" cellpadding="30">
+		<tr>
+			<td align="left" width="40%">
+				<h1>01</h1>
+				<h4>Slack Calls: Redesign</h4>
+				<p>2-week user experience design challenge for the Kleiner Perkins Fellowship.</p>
+				<a href="#" class="button">Link Button</a>
+				<a href="#" class="button">Link Button</a>
+			</td>
+			<td width="40%" class="">
+				<img src="https://play-lh.googleusercontent.com/IeNJWoKYx1waOhfWF6TiuSiWBLfqLb18lmZYXSgsH1fvb8v1IYiZr5aYWe0Gxu-pVZX3" class="image-preview">
+			</td>
+		</tr>
+	</table>	
   </div>
-  <div id="portfolio-1">Item 2</div>
-  <div id="portfolio-2">Item 3</div>
+  <div id="portfolio-2">
+	<section>
+		<h1 style="text-align: center;">I like to go <br>with the flow.</h1>
+		<p style="text-align: center;">This is a description about me.</p>
+		<a href="mailto:amyflo@stanford.edu"><img src="assets/icons/basic/mail.svg" class="icon" alt="Email"></a>
+		<a href="https://instagram.com/"><img src="assets/icons/brand/instagram.svg" class="icon" alt="Email"></a>
+		<img src="assets/icons/brand/LinkedIn.svg" class="icon" alt="Email">
+	</section>
+  </div>
 </div>
 
 <script src="https://bundle.run/css-scroll-snap-polyfill@0.1.2"></script>
