--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Amy Lo Design Portolio</title>
 	<meta name="author" content="Amy Lo" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
 	<link rel="stylesheet" href="/dist/fullpage.css" />
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet"
@@ -18,32 +19,59 @@
 		<p><a href="#home">Home</a></p>
 		<p><a href="#">News</a></p>
 		<p><a href="#">Contact</a></p>
-	  </div>
+	</div>
 
-<div id="carousel" class="snap">
-  <div id="home" class="divider" style="display: block;">
-	<h1 style="text-align: center; margin-top: 25vh;">I like to go <br>with the flow.</h1>
-	<p style="text-align: center;">This is a description about me.</p>
-	<a href="mailto:amyflo@stanford.edu"><img src="assets/icons/basic/mail.svg" class="icon" alt="Email"></a>
-	<a href="https://instagram.com/"><img src="assets/icons/brand/instagram.svg" class="icon" alt="Email"></a>
-	<img src="assets/icons/brand/LinkedIn.svg" class="icon" alt="Email">
-	  
-</div>
-  <div id="portfolio-2" class="divider">
-	<div class="row">
-		<div class="column" style="margin: auto; margin-top: 10vh; text-align: left;">
-			<h1>01</h1>
-			<h5>Slack Calls</h5>
-			<p>2-week UX Design challenge</p>
-			<a href="#" class="button">Link Button</a>
-			<a href="#" class="button">Link Button</a>	
+	<div id="carousel" class="snap">
+		<div id="carousel-0" class="divider" style="display: block;">
+			<h1 style="text-align: center; margin-top: 25vh;">I like to go <br>with the flow.</h1>
+			<p style="text-align: center;">This is a description about me.</p>
+			<a href="mailto:amyflo@stanford.edu"><img src="assets/icons/basic/mail.svg" class="icon" alt="Email"></a>
+			<a href="https://instagram.com/"><img src="assets/icons/brand/instagram.svg" class="icon" alt="Email"></a>
+			<img src="assets/icons/brand/LinkedIn.svg" class="icon" alt="Email">  
 		</div>
-		<div class="column">
-			<img class="preview" src="https://play-lh.googleusercontent.com/IeNJWoKYx1waOhfWF6TiuSiWBLfqLb18lmZYXSgsH1fvb8v1IYiZr5aYWe0Gxu-pVZX3">
+		<div id="carousel-1" class="divider">
+			<div class="row">
+				<div class="column" style="margin: auto; margin-top: 10vh; text-align: left;">
+					<h1>01</h1>
+					<h5>Slack Calls</h5>
+					<p>2-week UX Design challenge</p>
+					<a href="#" class="button">Link Button</a>
+					<a href="#" class="button">Link Button</a>	
+				</div>
+				<div class="column">
+					<img class="preview" src="https://play-lh.googleusercontent.com/IeNJWoKYx1waOhfWF6TiuSiWBLfqLb18lmZYXSgsH1fvb8v1IYiZr5aYWe0Gxu-pVZX3">
+				</div>
+			</div>
 		</div>
-	  </div>
-  </div>
-</div>
+		<div id="carousel-2" class="divider">
+			<div class="row">
+				<div class="column" style="margin: auto; margin-top: 10vh; text-align: left;">
+					<h1>01</h1>
+					<h5>Census<br>Academy</h5>
+					<p>UI/UX with the Census Bureau</p>
+					<a href="#" class="button">Link Button</a>
+					<a href="#" class="button">Link Button</a>	
+				</div>
+				<div class="column">
+					<img class="preview" src="https://play-lh.googleusercontent.com/IeNJWoKYx1waOhfWF6TiuSiWBLfqLb18lmZYXSgsH1fvb8v1IYiZr5aYWe0Gxu-pVZX3">
+				</div>
+			</div>
+		</div>
+		<div id="carousel-3" class="divider">
+			<div class="row">
+				<div class="column" style="margin: auto; margin-top: 10vh; text-align: left;">
+					<h1>01</h1>
+					<h5>Stanford Open <br> Data Project</h5>
+					<p>UI/UX with the Census Bureau</p>
+					<a href="#" class="button">Link Button</a>
+					<a href="#" class="button">Link Button</a>	
+				</div>
+				<div class="column">
+					<img class="preview" src="https://play-lh.googleusercontent.com/IeNJWoKYx1waOhfWF6TiuSiWBLfqLb18lmZYXSgsH1fvb8v1IYiZr5aYWe0Gxu-pVZX3">
+				</div>
+			</div>
+		</div>
+	</div>
 
 <script src="https://bundle.run/css-scroll-snap-polyfill@0.1.2"></script>
 <script  src="./script.js"></script>
