--- a/index.html
+++ b/index.html
@@ -5,76 +5,76 @@
 	<title>Amy Lo Design Portolio</title>
 	<meta name="author" content="Amy Lo" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
-	<link rel="stylesheet" href="/dist/fullpage.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css" />
-	<link rel="stylesheet"
-	href="https://fonts.googleapis.com/css?family=Inter">
-	<script src="jquery-3.5.1.min.js"></script>
-	<script src="script.js"></script>
+	<link rel="stylesheet" href="https://use.typekit.net/top4nrr.css">
 </head>
-<body>
-
-	<div class="navbar">
-		<p><a href="#home">Home</a></p>
-		<p><a href="#">News</a></p>
-		<p><a href="#">Contact</a></p>
-	</div>
-
-	<div id="carousel" class="snap">
-		<div id="carousel-0" class="divider" style="display: block;">
-			<h1 style="text-align: center; margin-top: 25vh;">I like to go <br>with the flow.</h1>
-			<p style="text-align: center;">This is a description about me.</p>
-			<a href="mailto:amyflo@stanford.edu"><img src="assets/icons/basic/mail.svg" class="icon" alt="Email"></a>
-			<a href="https://instagram.com/"><img src="assets/icons/brand/instagram.svg" class="icon" alt="Email"></a>
-			<img src="assets/icons/brand/LinkedIn.svg" class="icon" alt="Email">  
-		</div>
-		<div id="carousel-1" class="divider">
-			<div class="row">
-				<div class="column" style="margin: auto; margin-top: 10vh; text-align: left;">
-					<h1>01</h1>
-					<h5>Slack Calls</h5>
-					<p>2-week UX Design challenge</p>
-					<a href="#" class="button">Link Button</a>
-					<a href="#" class="button">Link Button</a>	
-				</div>
-				<div class="column">
-					<img class="preview" src="https://play-lh.googleusercontent.com/IeNJWoKYx1waOhfWF6TiuSiWBLfqLb18lmZYXSgsH1fvb8v1IYiZr5aYWe0Gxu-pVZX3">
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="#">Navbar</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			  <ul class="navbar-nav">
+				<li class="nav-item active">
+				  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="#">Features</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="#">Pricing</a>
+				</li>
+				<li class="nav-item dropdown">
+				  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Dropdown link
+				  </a>
+				  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					<a class="dropdown-item" href="#">Action</a>
+					<a class="dropdown-item" href="#">Another action</a>
+					<a class="dropdown-item" href="#">Something else here</a>
+				  </div>
+				</li>
+			  </ul>
+			</div>
+		</nav>
+		
+		<style>
+			.card{
+				border: none;
+			}
+		</style>
+		
+		<div class="container">
+			<div class="mt-5 row d-flex justify-content-center">
+				<div class="mt-3 row d-flex justify-content-center">
+					<div class="col-sm-10">
+						<div class="card-deck">
+							<div class="card">
+								<span data-tilt>
+									<img class="card-img" src="assets/coverimages/ACLU.png" alt="Card image cap">
+								</span>
+								
+							</div>
+							<div class="card">
+								<img class="card-img" src="assets/coverimages/ACLU.png" alt="Card image cap">
+							</div>
+							<div class="card">
+								<img class="card-img" src="assets/coverimages/ACLU.png" alt="Card image cap">
+							  </div>
+							  
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div id="carousel-2" class="divider">
-			<div class="row">
-				<div class="column" style="margin: auto; margin-top: 10vh; text-align: left;">
-					<h1>01</h1>
-					<h5>Census<br>Academy</h5>
-					<p>UI/UX with the Census Bureau</p>
-					<a href="#" class="button">Link Button</a>
-					<a href="#" class="button">Link Button</a>	
-				</div>
-				<div class="column">
-					<img class="preview" src="https://play-lh.googleusercontent.com/IeNJWoKYx1waOhfWF6TiuSiWBLfqLb18lmZYXSgsH1fvb8v1IYiZr5aYWe0Gxu-pVZX3">
-				</div>
-			</div>
-		</div>
-		<div id="carousel-3" class="divider">
-			<div class="row">
-				<div class="column" style="margin: auto; margin-top: 10vh; text-align: left;">
-					<h1>01</h1>
-					<h5>Stanford Open <br> Data Project</h5>
-					<p>UI/UX with the Census Bureau</p>
-					<a href="#" class="button">Link Button</a>
-					<a href="#" class="button">Link Button</a>	
-				</div>
-				<div class="column">
-					<img class="preview" src="https://play-lh.googleusercontent.com/IeNJWoKYx1waOhfWF6TiuSiWBLfqLb18lmZYXSgsH1fvb8v1IYiZr5aYWe0Gxu-pVZX3">
-				</div>
-			</div>
-		</div>
-	</div>
 
-<script src="https://bundle.run/css-scroll-snap-polyfill@0.1.2"></script>
-<script  src="./script.js"></script>
-	
-</body>
-</html>
+
+		<!--SCRIPTING-->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>  
+		<script src="tilt.jquery.js"></script>
+		<script src="script.js"></script>
+	</body>
+	</html>
