Adding cover photos + styling pages

--- a/about.html
+++ b/about.html
@@ -34,32 +34,34 @@
 				</div>
 			</nav>
 			<div class="container-fluid mx-auto">
-				<div class="row">	
-					<div class="col-sm-12 mx-auto">	
-						<div>
-							<h1 id="name" class="px-5">Amy Lo</h1>
-							<h1 style="text-align: left;" id="changeTextMobile" class="px-5">is a designer at the Census Bureau.</h1>
-							<h1 style="text-align: left" id="changeText" class="px-5">is a designer at the Census Bureau.</h1>
-							<h3 style="color: #3855b4;" class="px-5">She designs to find meaning in all the <a style="color: #3855b4;" href="work.html">❀ little things that make us human.</a></h3>
+				<div class="row mx-auto">	
+					<div class="row px-5 py-24">
+						<div class="col-sm-4 p-3">
+							<img class="card-img"  data-tilt src="assets/coverimages/Amy.png">
 						</div>
-						<div class="row px-5 py-24">
-							<div class="col-sm-4 p-3">
-								<img class="card-img"  data-tilt src="assets/coverimages/product/Census.png">
-							</div>
-							<div class="col-sm-4 p-3">
-								<img class="card-img"  data-tilt src="assets/coverimages/product/Census.png">
-							</div>
-							<div class="col-sm-4 p-3">
-								<img class="card-img"  data-tilt src="assets/coverimages/product/Census.png">
-							</div>
-							
+						<div class="col-sm-7 p-3">
+							<h1><a href="#">I like the little things in life.</a></h1>
+							<p>My name is Amy Lo (she/her), and I am a Product Design and Psychology major at Stanford. 
+								I have experience as a fellow at the U.S. Census Bureau, Coding it Forward, and 50+1 Strategies as well as 
+								leading multiple campus organizations as a designer.  
+							</p>
+							<p>
+							I’m currently looking for full-time internships in Spring & Summer 2021. 
+							</p>
+							<p>
+								I aspire to solve problems through human-centered design by delving deep into the details and taking the time to bring empathy, care, and thought to every user interview and design decision. 
+								With a multidisciplinary  background in front-end development, mechanical engineering, design, and psychology, I tackle each user need with a unique lens.
+								I am an advocate for inclusivity and accessibility in design: I want to meet users where they are. 
+							</p>
+							<h5>
+								Interested in learning more?
+							</h5>
+							<p>
+								Send me an email at <a href="mailto:amyflo@stanford.edu">amyflo@stanford.edu</a> or connect with me on <a href="#">LinkedIn</a>!
+							</p>
 						</div>
-						
-					</div>	
+					</div>
 				</div>
-			</div>
-			<div class="footer p-4 mx-auto" style="text-align: center;">
-				<a href="$" style="color: white; text-transform: uppercase;">Made with ❤ and Github.</a>
 			</div>
 		</main>
 		
