--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<a class="nav-link" href="#">Resume</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">About</a>
+						<a class="nav-link" href="about.html">About</a>
 						</li>
 					</ul>
 				</div>
