--- a/work.html
+++ b/work.html
@@ -11,21 +11,24 @@
 </head>
 	<body>
 		<main>
-			<nav class="navbar navbar-expand-lg navbar-dark mx-auto mb-5">
-				<a class="navbar-brand" href="#">Amy Lo</a>
+			<nav class="navbar navbar-expand-lg navbar-dark mx-auto mb-3">
+				<a class="navbar-brand" href="#"><h2 class="leftgear">❀</h2></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
 					<ul class="navbar-nav">
 					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Work <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="work.html">Work <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Resume</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">About</a>
+						<a class="nav-link" href="about.html">About</a>
 						</li>
 					</ul>
 				</div>
@@ -34,7 +37,6 @@
 				<div class="row">	
 					<div class="col-sm-12 mx-auto" style="text-align: center;">	
 						<h1>A little bit of everything.</h1>
-						
 						<div class="button-group sort-button-group row mt-5 justify-content-center">
 							<button class="button is-checked" data-category="all">All Work</button>
 							<button class="button" data-category="product">Product</button>
