fixing the scroll menu  and troubleshooting

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 							<img class="card-img"  data-tilt src="assets/coverimages/Amy.png">
 						</div>
 						<div class="col-sm-7 p-3">
-							<h1><a href="#">I like the little things in life.</a></h1>
+							<h1><a href="#">I like the ❀ little things in life.</a></h1>
 							<p>My name is Amy Lo (she/her), and I am a Product Design and Psychology major at Stanford. 
 								I have experience as a fellow at the U.S. Census Bureau, Coding it Forward, and 50+1 Strategies as well as 
 								leading multiple campus organizations as a designer.  
