--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="work.html">Work <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="work.html">Work</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Resume</a>
@@ -40,17 +40,17 @@
 							<h1 id="name" class="px-5">Amy Lo</h1>
 							<h1 style="text-align: left;" id="changeTextMobile" class="px-5">is a designer at the Census Bureau.</h1>
 							<h1 style="text-align: left" id="changeText" class="px-5">is a designer at the Census Bureau.</h1>
-							<h3 style="color: #3855b4;" class="px-5">She designs to find meaning in all the <a style="color: #3855b4;" href="work.html">❀ little things that make us human.</a></h3>
+							<h3 style="color: #3392fb;" class="px-5">She designs to find meaning in all the <a href="work.html">❀ little things that make us human.</a></h3>
 						</div>
 						<div class="row px-5 py-24">
 							<div class="col-sm-4 p-3">
 								<img class="card-img"  data-tilt src="assets/coverimages/product/Census.png">
 							</div>
 							<div class="col-sm-4 p-3">
-								<img class="card-img"  data-tilt src="assets/coverimages/product/Census.png">
+								<img class="card-img"  data-tilt src="assets/coverimages/product/Slack.png">
 							</div>
 							<div class="col-sm-4 p-3">
-								<img class="card-img"  data-tilt src="assets/coverimages/product/Census.png">
+								<img class="card-img"  data-tilt src="assets/coverimages/product/SODP.png">
 							</div>
 							
 						</div>
