--- a/work.html
+++ b/work.html
@@ -34,15 +34,19 @@
 				</div>
 			</nav>
 			<div class="container-fluid mx-auto">
+                <h1 style="color: #3392fb">The ❀ little things do add up.</h1>
 				<div class="row">	
-					<div class="col-sm-12 mx-auto" style="text-align: center;">	
-						<h1>A little bit of everything.</h1>
-						<div class="button-group sort-button-group row mt-5 justify-content-center">
-							<button class="button is-checked" data-category="all">All Work</button>
+					<div class="col-sm-3 mx-auto">	
+						<div class="button-group sort-button-group mt-2 justify-content-center">
+							<button class="button is-checked" data-category="all">All</button>
 							<button class="button" data-category="product">Product</button>
-							<button class="button" data-category="graphic">Visual</button>
-						</div>
-						<div class="grid mx-auto m-5">
+                            <button class="button" data-category="graphic">Visual</button>
+                            <button class="button" data-category="campaign">Campaign</button>
+                            <button class="button" data-category="experiment">Experiments</button>
+                        </div>
+					</div>
+                    <div class="col-sm-9 mx-auto">	
+						<div class="grid mx-auto m-2">
 							<div class="grid-sizer"></div>
 							<div class="grid-item product">
 								<img data-tilt src="assets/coverimages/product/Census.png">
@@ -50,16 +54,16 @@
 							<div class="grid-item product">
 								<img data-tilt src="assets/coverimages/product/Slack.png">
 							</div>
-							<div class="grid-item graphic">
+							<div class="grid-item graphic campaign">
 								<img data-tilt src="assets/coverimages/graphic/Movement for Black Lives.png">
 							</div>
-							<div class="grid-item graphic">
+							<div class="grid-item graphic campaign">
 								<img data-tilt src="assets/coverimages/graphic/ACLU.png">
 							</div>
 							<div class="grid-item graphic">
 								<img data-tilt src="assets/coverimages/graphic/Commissions.png">
-							</div>
-							<div class="grid-item graphic">
+                            </div>
+							<div class="grid-item graphic campaign">
 								<img data-tilt src="assets/coverimages/graphic/CAIR.png">
 							</div>
 							<div class="grid-item product">
@@ -71,22 +75,22 @@
 							<div class="grid-item graphic">
 								<img data-tilt src="assets/coverimages/graphic/Daily.png">
 							</div>
-							<div class="grid-item graphic">
+							<div class="grid-item graphic campaign">
 								<img data-tilt src="assets/coverimages/graphic/Yes on 16.png">
 							</div>
-							<div class="grid-item graphic">
+							<div class="grid-item graphic campaign">
 								<img data-tilt src="assets/coverimages/graphic/Yes on J.png">
 							</div>
-							<div class="grid-item graphic">
+							<div class="grid-item graphic campaign">
 								<img data-tilt src="assets/coverimages/graphic/Buffy Wicks.png">
 							</div>
-							<div class="grid-item graphic">
+							<div class="grid-item graphic campaign">
 								<img data-tilt src="assets/coverimages/graphic/David Chiu.png">
 							</div>
-							<div class="grid-item graphic">
+							<div class="grid-item graphic campaign">
 								<img data-tilt src="assets/coverimages/graphic/Elena Condes.png">
 							</div>
-							<div class="grid-item graphic">
+							<div class="grid-item graphic campaign">
 								<img data-tilt src="assets/coverimages/graphic/RLJ.png">
 							</div>
 							<div class="grid-item graphic">
@@ -97,6 +101,9 @@
 							</div>
 							<div class="grid-item graphic">
 								<img data-tilt src="assets/coverimages/graphic/Munira + Vianna.png">
+                            </div>
+                            <div class="grid-item graphic">
+								<img data-tilt src="assets/coverimages/graphic/Students 2 Stay.png">
 							</div>
 							<div class="grid-item graphic">
 								<img data-tilt src="assets/coverimages/graphic/Outside our Bubble.png">
