--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 				</button>
 				<div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
 					<ul class="navbar-nav">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
@@ -28,7 +28,7 @@
 						<a class="nav-link" href="#">Resume</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="about.html">About</a>
+						<a class="nav-link active" href="about.html">About</a>
 						</li>
 					</ul>
 				</div>
