Tiny  margin change

--- a/about.html
+++ b/about.html
@@ -35,11 +35,11 @@
 			</nav>
 			<div class="container-fluid mx-auto">
 				<div class="row mx-auto">	
-					<div class="row px-5 py-24">
-						<div class="col-sm-4">
+					<div class="row">
+						<div class="col-sm-4 mx-auto">
 							<img class="card-img"  data-tilt src="assets/coverimages/Amy.png">
 						</div>
-						<div class="col-sm-7">
+						<div class="mx-auto col-sm-7">
 							<h1><a href="#">I like the ❀ little things in life.</a></h1>
 							<p>My name is Amy Lo (she/her), and I am a Product Design and Psychology major at Stanford. 
 								I have experience as a fellow at the U.S. Census Bureau, Coding it Forward, and 50+1 Strategies as well as 
