--- a/work.html
+++ b/work.html
@@ -33,7 +33,7 @@
 					</ul>
 				</div>
 			</nav>
-			<div class="container-fluid px-5 mx-auto">
+			<div class="container-fluid mx-auto">
                 <h1 style="color: #3392fb">The ❀ little things do add up.</h1>
 				<div class="row">	
 					<div class="col-sm-3 mx-auto">	
