--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
 				</div>
 			</nav>
 			<div class="container-fluid mx-auto">
-                <h1 style="color: #3392fb">The ❀ little things do add up.</h1>
+                <h1 style="color: #3392fb">The ❀ little things add up.</h1>
 				<div class="row">	
 					<div class="col-sm-3 mx-auto">	
 						<div class="button-group sort-button-group mt-2 justify-content-center">
