pushing spacing changes

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 			</nav>
 			<div class="container-fluid mx-auto">
 				<div class="row">	
-					<div class="col-sm-12 mx-auto">	
+					<div class="col-sm-11 mx-auto">	
 						<div>
-							<h1 id="name" class="px-5">Amy Lo</h1>
-							<h1 style="text-align: left;" id="changeTextMobile" class="px-5">is a designer at the Census Bureau.</h1>
-							<h1 style="text-align: left" id="changeText" class="px-5">is a designer at the Census Bureau.</h1>
-							<h3 style="color: #3392fb;" class="px-5">She designs to find meaning in all the <a href="work.html">❀ little things that make us human.</a></h3>
+							<h1 id="name">Amy Lo</h1>
+							<h1 style="text-align: left;" id="changeTextMobile">is a designer at the Census Bureau.</h1>
+							<h1 style="text-align: left" id="changeText">is a designer at the Census Bureau.</h1>
+							<h3 style="color: #3392fb;" >She designs to find meaning in all the <a href="work.html">❀ little things that make us human.</a></h3>
 						</div>
-						<div class="row px-5 py-24">
+						<div class="row">
 							<div class="col-sm-4 p-3">
 								<img class="card-img"  data-tilt src="assets/coverimages/product/Census.png">
 							</div>
