--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
 					<div class="col-sm-11 mx-auto">	
 						<div>
 							<h1 id="name">Amy Lo</h1>
-							<div>
-								<h3 id="changeText"></h3><div id="cursor"></div>
-								<h1 style="text-align: left;" id="changeTextMobile">is a designer at the Census Bureau.</h1>
-							</div>
+							<h1 style="text-align: left;" id="changeTextMobile">is a designer at the Census Bureau.</h1>
+							<h1 style="text-align: left" id="changeText">is a designer at the Census Bureau.</h1>
 							<h3 style="color: #3392fb;" >She designs to find meaning in all the <a href="work.html">❀ little things that make us human.</a></h3>
 						</div>
 						<div class="row">
@@ -53,8 +51,10 @@
 							</div>
 							<div class="col-sm-4 p-3">
 								<img class="card-img"  data-tilt src="assets/coverimages/product/SODP.png">
-							</div>	
+							</div>
+							
 						</div>
+						
 					</div>	
 				</div>
 			</div>
