--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="https://use.typekit.net/top4nrr.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 	<body>
 		<main>
@@ -33,29 +34,29 @@
 					</ul>
 				</div>
 			</nav>
-			<div class="container-fluid mx-auto">
+			<div class="container mx-auto">
 				<div class="row mx-auto">	
 					<div class="row">
-						<div class="col-sm-4 mx-auto">
-							<img class="card-img"  data-tilt src="assets/coverimages/Amy.png">
+						<div class="col-md-4 mx-auto" style="text-align: center;">
+							<img class="card-img" style="width: 300px"  data-tilt src="assets/coverimages/Amy.png"><br>
+							<a href="#" class="fa fa-linkedin"></a>
+							<a href="#" class="fa fa-github"></a>
+							<a href="#" class="fa fa-instagram"></a>
 						</div>
-						<div class="mx-auto col-sm-7">
+						<div class="col-md-8">
 							<h1><a href="#">I like the ❀ little things in life.</a></h1>
 							<p>My name is Amy Lo (she/her), and I am a Product Design and Psychology major at Stanford. 
-								I have experience as a fellow at the U.S. Census Bureau, Coding it Forward, and 50+1 Strategies as well as 
-								leading multiple campus organizations as a designer.  
+							<b>I’m currently looking for full-time internships in Spring & Summer 2021. </b>
 							</p>
 							<p>
-							I’m currently looking for full-time internships in Spring & Summer 2021. 
-							</p>
-							<p>
-								I aspire to solve problems through human-centered design by delving deep into the details and taking the time to bring empathy, care, and thought to every user interview and design decision. 
-								With a multidisciplinary  background in front-end development, mechanical engineering, design, and psychology, I tackle each user need with a unique lens.
+								I aspire to solve problems through human-centered design by delving deep into the details and always bring empathy, care, and thought.
+								With a multidisciplinary background in front-end development, mechanical engineering, design, and psychology, I tackle each user need with a unique lens.
 								I am an advocate for inclusivity and accessibility in design: I want to meet users where they are. 
 							</p>
 							<h5>
 								Interested in learning more?
 							</h5>
+							<a class="btn btn-secondary">Hello</a>
 							<p>
 								Send me an email at <a href="mailto:amyflo@stanford.edu">amyflo@stanford.edu</a> or connect with me on <a href="#">LinkedIn</a>!
 							</p>
