--- a/index.html
+++ b/index.html
@@ -33,29 +33,46 @@
 					</ul>
 				</div>
 			</nav>
-			<div class="container-fluid mx-auto">
-				<div class="row">	
-					<div class="col-sm-11 mx-auto">	
+			<div class="container mx-auto">
+				<div class="row mx-auto">	
+					<div>
+						<h1 id="name">Amy Lo</h1>
 						<div>
-							<h1 id="name">Amy Lo</h1>
-							<div>
-								<h3 id="changeText"></h3><div id="cursor"></div>
-								<h1 style="text-align: left;" id="changeTextMobile">is a designer at the Census Bureau.</h1>
-							</div>
-							<h3 style="color: #3392fb;" >She designs to find meaning in all the <a href="work.html">❀ little things that make us human.</a></h3>
+							<h3 id="changeText"></h3><div id="cursor"></div>
+							<h1 style="text-align: left;" id="changeTextMobile">is a designer at the Census Bureau.</h1>
 						</div>
-						<div class="row">
-							<div class="col-sm-4 p-3">
-								<img class="card-img"  data-tilt src="assets/coverimages/product/Census.png">
-							</div>
-							<div class="col-sm-4 p-3">
-								<img class="card-img"  data-tilt src="assets/coverimages/product/Slack.png">
-							</div>
-							<div class="col-sm-4 p-3">
-								<img class="card-img"  data-tilt src="assets/coverimages/product/SODP.png">
-							</div>	
+						<h3 style="color: #3392fb;" >She designs to find meaning in the <a href="work.html">❀ little things that make us human.</a></h3>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-3 p-3 m-page">
+						<img class="card-img m-img"  data-tilt src="assets/coverimages/product/Census.png">
+						<div class="m-text">
+							<h5 class="mt-3 mb-2">CENSUS ACADEMY</h5>
+							<p>Hacking bureaucracy at the Census Bureau.</p>
 						</div>
-					</div>	
+					</div>
+					<div class="col-sm-3 p-3 m-page">
+						<img class="card-img m-img"  data-tilt src="assets/coverimages/product/Census.png">
+						<div class="m-text">
+							<h5 class="mt-3 mb-2">SLACK CALLS</h5>
+							<p>Reimagining work calls through user research.</p>
+						</div>
+					</div>
+					<div class="col-sm-3 p-3 m-page">
+						<img class="card-img m-img"  data-tilt src="assets/coverimages/product/Census.png">
+						<div class="m-text">
+							<h5 class="mt-3 mb-2">OPEN DATA CAMPUS</h5>
+							<p>Designing a data handbook for universities.</p>
+						</div>
+					</div>
+					<div class="col-sm-3 p-3 m-page">
+						<img class="card-img m-img"  data-tilt src="assets/coverimages/product/Census.png">
+						<div class="m-text">
+							<h5 class="mt-3 mb-2">Angle</h5>
+							<p>Making spelling and learning English interactive.</p>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="footer p-4 mx-auto" style="text-align: center;">
