--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						</div>
 					</div>
 					<div class="col-sm-3 p-3 m-page">
-						<img class="card-img m-img"  data-tilt src="assets/coverimages/product/Census.png">
+						<img class="card-img m-img"  data-tilt src="assets/coverimages/product/Slack.png">
 						<div class="m-text">
 							<h5 class="mt-3 mb-2">SLACK CALLS</h5>
 							<p>Reimagining work calls through user research.</p>
@@ -63,7 +63,7 @@
 						<img class="card-img m-img"  data-tilt src="assets/coverimages/product/Census.png">
 						<div class="m-text">
 							<h5 class="mt-3 mb-2">OPEN DATA CAMPUS</h5>
-							<p>Designing a data handbook for universities.</p>
+							<p>Designing and coding a data handbook for universities.</p>
 						</div>
 					</div>
 					<div class="col-sm-3 p-3 m-page">
