Designing about / work pages
- creating about page
- creating work page
- desiging home page
- creating layout

Notes:
- need to standardize footer across all pages

--- a/about.html
+++ b/about.html
@@ -11,61 +11,128 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 	<body>
-		<main>
-			<nav class="navbar navbar-expand-lg navbar-dark mx-auto mb-3">
-				<a class="navbar-brand" href="#"><h2 class="leftgear">❀</h2></a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
-					<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="work.html">Work <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Resume</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link active" href="about.html">About</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-			<div class="container mx-auto">
-				<div class="row mx-auto">	
-					<div class="row">
-						<div class="col-md-4 mx-auto" style="text-align: center;">
-							<img class="card-img" style="width: 300px"  data-tilt src="assets/coverimages/Amy.png"><br>
-							<a href="#" class="fa fa-linkedin"></a>
-							<a href="#" class="fa fa-github"></a>
-							<a href="#" class="fa fa-instagram"></a>
+		<nav class="navbar navbar-expand-lg navbar-dark mx-auto mb-3">
+			<a class="navbar-brand" href="#"><h2 class="leftgear">❀</h2></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+				<br>
+				<li class="nav-item">
+					<a class="nav-link" href="work.html">Work <span class="sr-only">(current)</span></a>
+				<br>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Resume</a>
+				<br>
+				<li class="nav-item">
+					<a class="nav-link active" href="about.html">About</a>
+					<br>
+				</ul>
+			</div>
+		</nav>
+		<main class="mx-auto">
+			<div class="container p-3">
+				<div class="mb-5" style="border: 1px solid white; border-radius: 3px;">
+					<div class="row mx-auto my-2" style="border-bottom: 1px white solid; height: 30px;">
+						<div class="col-sm-2">
+						  <span class="dot" style="background:#ED594A;"></span>
+						  <span class="dot" style="background:#F2CD5D;"></span>
+						  <span class="dot" style="background:#5AC05A;"></span>
 						</div>
-						<div class="col-md-8">
-							<h1><a href="#">I like the ❀ little things in life.</a></h1>
-							<p>My name is Amy Lo (she/her), and I am a Product Design and Psychology major at Stanford. 
-							<b>I’m currently looking for full-time internships in Spring & Summer 2021. </b>
-							</p>
+					</div>
+					<div class="row mx-auto py-2" style="border-bottom: 1px white solid;">
+						<div class="col-sm-3">
+							<h2>Who I am</h2>
+						</div>
+						<div class="col-sm-9">
+							<h3 style="display: inline;"><a href="about.html"><b>Amy Lo</b></a>&nbsp;
+								<h3 id="changeText"></h3></h3><h3 id="cursor"></h3>
+								<h3 id="changeTextMobile">is a Product Designer based in LA.</h3>
 							<p>
-								I aspire to solve problems through human-centered design by delving deep into the details and always bring empathy, care, and thought.
-								With a multidisciplinary background in front-end development, mechanical engineering, design, and psychology, I tackle each user need with a unique lens.
-								I am an advocate for inclusivity and accessibility in design: I want to meet users where they are. 
+								<mark>She/her/hers. Asian-American. Pride. Women in STEM. Future engineer.</mark>
 							</p>
-							<h5>
-								Interested in learning more?
-							</h5>
-							<a class="btn btn-secondary">Hello</a>
+						</div>		
+					</div>
+					<div class="row mx-auto" style="border-bottom: 1px white solid;">
+						<div class="col-sm-6" style="border-right: 1px white solid;">
+							<h2 class="mt-2"> What I do</h2>
 							<p>
-								Send me an email at <a href="mailto:amyflo@stanford.edu">amyflo@stanford.edu</a> or connect with me on <a href="#">LinkedIn</a>!
+								<span style="color: #F2CD5D">⤏ </span>Design and code digital products @ the U.S. Census Bureau<br>
+								<span style="color: #F2CD5D">⤏ </span>Building a datathon with the Stanford Open Data project<br>
+								<span style="color: #F2CD5D">⤏ </span>Research with the Stanford Culture and Emotion Lab and the Stanford Tech History Project<br>
+								<span style="color: #F2CD5D">⤏ </span>Illustrate news media with the Stanford Daily and and advocate for students with Associated Students of Stanford University<br>
+								<span style="color: #F2CD5D">⤏ </span>Write and create career content for Stanford University at BEAM
 							</p>
 						</div>
+						<div class="col-sm-6">
+							<h2 class="mt-2">What I've done</h2>
+							<p>
+								<span style="color: #F2CD5D">⤏ </span>Raised over $36k for Black Lives Matter on social media in three weeks<br>
+								<span style="color: #F2CD5D">⤏ </span>Designed for 20 political campaigns, including Movement for Black Lives and the ACLU, with 50+1 Strategies<br>
+								<span style="color: #F2CD5D">⤏ </span>Branded advocacy campaigns for international students, the King Institute, and sexual violence prevention<br>
+								<span style="color: #F2CD5D">⤏ </span>Hacked bureacracy with Coding it Forward as a Civic Digital Fellow <br>
+								<span style="color: #F2CD5D">⤏ </span>Survived a pandemic and designed about it too
+							</p>
+						</div>
+					</div>
+					<div class="row mx-auto py-2 my-2">
+						<div class="col-sm-3">
+							<h2>Contact</h2>
+						</div>
+						<div class="col-sm-9">
+							<h3>Let's get in touch: <a href="mailto:amyflo@stanford.edu">amyflo@stanford.edu</a></h3>
+						</div>		
 					</div>
 				</div>
 			</div>
 		</main>
+
 		
+		<footer class="container my-3">
+			<div class="row">
+				<div class="col-sm-3">
+					<h4>You made it here!</h4>
+					<p>This site was built with Github – go ahead and give it some love!</p>
+					<div>
+						<img class="icon" src="assets/icons/mail.svg">
+						<img class="icon" src="assets/icons/LinkedIn.svg">
+						<img class="icon" src="assets/icons/instagram.svg">
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<h4>Case Studies</h4>
+					<p>
+						Census Academy<br>
+						Slack Calls <br>
+						Open Data Campus<br>
+						Angle<br>
+					</p> 
+				</div>	
+				<div class="col-sm-3">
+					<h4>Navigation</h4>
+					<p>
+						<a href="index.html">Home</a><br>
+						<a href="work.html">Work</a><br>
+						<a href="work.html">Resume</a><br>
+						<a href="about.html">About</a>
+					</p> 
+				</div>
+				<div class="col-sm-3">
+					<h4>Contact</h4>
+					<p>Let's get in touch!</p>
+					<a class="btn btn-hide" href="#">Send Message</a>
+				</div>
+			</div>
+		</footer>
+
+		<!---CURSORS--->
+		<a onclick="topFunction()" id="backToTop" title="Go to top">↑</a>
+		<div class="your-cursor2"></div>
+		<div class="follow2"></div>
+		<script src="TweenMax.min.js"></script>
 		  <!-- partial -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 		<script src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
